@@ -97,22 +97,6 @@ name|hbase
 operator|.
 name|shell
 operator|.
-name|ShellSecurityManager
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
-name|shell
-operator|.
 name|ReturnMsg
 import|;
 end_import
@@ -129,7 +113,57 @@ name|hbase
 operator|.
 name|shell
 operator|.
+name|ShellSecurityManager
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|shell
+operator|.
+name|TableFormatter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|shell
+operator|.
 name|TableFormatterFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|shell
+operator|.
+name|formatter
+operator|.
+name|HtmlTableFormatter
 import|;
 end_import
 
@@ -188,7 +222,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * An hbase shell.  *   * @see<a href="http://wiki.apache.org/lucene-hadoop/Hbase/HbaseShell">HbaseShell</a>  */
+comment|/**  * An hbase shell.  *   * @see<a  *      href="http://wiki.apache.org/lucene-hadoop/Hbase/HbaseShell">HbaseShell</a>  */
 end_comment
 
 begin_class
@@ -204,6 +238,20 @@ name|boolean
 name|DEFAULT_BELL_ENABLED
 init|=
 literal|true
+decl_stmt|;
+specifier|public
+specifier|static
+name|String
+name|MASTER_ADDRESS
+init|=
+literal|null
+decl_stmt|;
+specifier|public
+specifier|static
+name|String
+name|HTML_OPTION
+init|=
+literal|null
 decl_stmt|;
 comment|/** Return the boolean value indicating whether end of command or not */
 specifier|static
@@ -261,7 +309,7 @@ else|:
 literal|"  --> "
 return|;
 block|}
-comment|/**    * @param watch true if execution time should be computed and returned    * @param start start of time interval    * @param end end of time interval    * @return a string of code execution time. */
+comment|/**    * @param watch true if execution time should be computed and returned    * @param start start of time interval    * @param end end of time interval    * @return a string of code execution time.    */
 specifier|public
 specifier|static
 name|String
@@ -307,7 +355,7 @@ else|:
 literal|""
 return|;
 block|}
-comment|/**    * Main method    * @param args not used    * @throws IOException    */
+comment|/**    * Main method    *     * @param args not used    * @throws IOException    */
 specifier|public
 specifier|static
 name|void
@@ -320,6 +368,11 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|argumentParsing
+argument_list|(
+name|args
+argument_list|)
+expr_stmt|;
 name|HBaseConfiguration
 name|conf
 init|=
@@ -370,8 +423,8 @@ argument_list|,
 literal|"UTF-8"
 argument_list|)
 decl_stmt|;
-name|TableFormatterFactory
-name|tff
+name|TableFormatter
+name|tableFormater
 init|=
 operator|new
 name|TableFormatterFactory
@@ -380,7 +433,62 @@ name|out
 argument_list|,
 name|conf
 argument_list|)
+operator|.
+name|get
+argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|MASTER_ADDRESS
+operator|!=
+literal|null
+condition|)
+block|{
+name|conf
+operator|.
+name|set
+argument_list|(
+literal|"hbase.master"
+argument_list|,
+name|MASTER_ADDRESS
+operator|.
+name|substring
+argument_list|(
+literal|9
+argument_list|,
+name|MASTER_ADDRESS
+operator|.
+name|length
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|HTML_OPTION
+operator|!=
+literal|null
+condition|)
+block|{
+name|tableFormater
+operator|=
+operator|new
+name|HtmlTableFormatter
+argument_list|(
+name|out
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"--html"
+argument_list|)
+expr_stmt|;
+block|}
 name|HelpCommand
 name|help
 init|=
@@ -389,10 +497,7 @@ name|HelpCommand
 argument_list|(
 name|out
 argument_list|,
-name|tff
-operator|.
-name|get
-argument_list|()
+name|tableFormater
 argument_list|)
 decl_stmt|;
 if|if
@@ -402,12 +507,25 @@ operator|.
 name|length
 operator|==
 literal|0
+operator|||
+operator|!
+name|args
+index|[
+literal|0
+index|]
+operator|.
+name|equals
+argument_list|(
+literal|"7"
+argument_list|)
 condition|)
+block|{
 name|help
 operator|.
 name|printVersion
 argument_list|()
 expr_stmt|;
+block|}
 name|StringBuilder
 name|queryStr
 init|=
@@ -475,10 +593,7 @@ argument_list|()
 argument_list|,
 name|out
 argument_list|,
-name|tff
-operator|.
-name|get
-argument_list|()
+name|tableFormater
 argument_list|)
 decl_stmt|;
 name|ReturnMsg
@@ -661,6 +776,84 @@ operator|.
 name|println
 argument_list|()
 expr_stmt|;
+block|}
+specifier|private
+specifier|static
+name|void
+name|argumentParsing
+parameter_list|(
+name|String
+index|[]
+name|args
+parameter_list|)
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|args
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
+condition|(
+name|args
+index|[
+name|i
+index|]
+operator|.
+name|toLowerCase
+argument_list|()
+operator|.
+name|startsWith
+argument_list|(
+literal|"--master:"
+argument_list|)
+condition|)
+block|{
+name|MASTER_ADDRESS
+operator|=
+name|args
+index|[
+name|i
+index|]
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|args
+index|[
+name|i
+index|]
+operator|.
+name|toLowerCase
+argument_list|()
+operator|.
+name|startsWith
+argument_list|(
+literal|"--html"
+argument_list|)
+condition|)
+block|{
+name|HTML_OPTION
+operator|=
+name|args
+index|[
+name|i
+index|]
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 end_class
